change dreams & fairmont logos + fix footer spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -424,12 +424,12 @@ video {
 .footer h3 {
 	font-size: 1em;
 	color: white !important;
-	margin-top: 0.3em !important;
-	margin-bottom: 0.2em !important;
+	margin-top: 0.5em !important;
+	margin-bottom: 0.5em !important;
 }
 .footer-icons {
-	margin-top: 0.3em !important;
-	margin-bottom: 0.25em !important;
+	margin-top: 0.5em !important;
+	margin-bottom: 0.5em !important;
 	padding: 0 !important;
 }
 
@@ -660,5 +660,6 @@ textarea {
 	padding: 0 !important;
 	width: 100% !important;
 	height: 100% !important;
-	padding-bottom: 5px !important;
+	padding-top: 2em !important;
+	padding-bottom: 2em !important;
 }
